ft_containers_test/logs.txt
../vector_tests/using allocator.cpp:14:46: error: use of undeclared identifier 'Alloc'
    exit(run_vector_allocator_unit_test<int, Alloc<int> >("using allocator", allocator_test));
                                             ^
1 error generated.
.cpp:30:10: note: in instantiation of function template specialization 'run_vector_unit_test<int>' requested here
    exit(run_vector_unit_test<int>("clear()", clear_test, clear_test));
         ^
/home/aponyatov/Desktop/ft_cont/ft_containers/ft_vector/ft_vector.hpp:56:14: note: explicit constructor is not a candidate
    explicit vector (const allocator_type& alloc = allocator_type()) : vector_base(alloc) {
             ^
/home/aponyatov/Desktop/ft_cont/ft_containers/ft_vector/ft_vector.hpp:61:14: note: explicit constructor is not a candidate
    explicit vector(size_type n, const T& val = T(), const allocator_type& alloc = allocator_type()) : vector_base(alloc) {
             ^
/home/aponyatov/Desktop/ft_cont/ft_containers/ft_vector/ft_vector.hpp:69:14: note: explicit constructor is not a candidate
    explicit vector(const my_vector& x) : vector_base(x.allocator_) {
             ^
/home/aponyatov/Desktop/ft_cont/ft_containers/ft_vector/ft_vector.hpp:78:14: note: explicit constructor is not a candidate
    explicit vector(InputIterator first, InputIterator last, const allocator_type& alloc = allocator_type(),
             ^
1 error generated.
/vector_tests/swap().cpp:1:
In file included from ../vector_tests/../system/system_methods.ipp:2:
In file included from ../vector_tests/../system/lib.hpp:12:
In file included from /usr/bin/../lib/gcc/x86_64-linux-gnu/10/../../../../include/c++/10/array:38:
In file included from /usr/bin/../lib/gcc/x86_64-linux-gnu/10/../../../../include/c++/10/utility:70:
In file included from /usr/bin/../lib/gcc/x86_64-linux-gnu/10/../../../../include/c++/10/bits/stl_pair.h:59:
/usr/bin/../lib/gcc/x86_64-linux-gnu/10/../../../../include/c++/10/bits/move.h:197:11: error: no matching constructor for initialization of 'ft::vector<int>'
      _Tp __tmp = _GLIBCXX_MOVE(__a);
          ^       ~~~~~~~~~~~~~~~~~~
../vector_tests/swap().cpp:58:10: note: in instantiation of function template specialization 'std::swap<ft::vector<int>>' requested here
    std::swap(vector, tmp2);
         ^
../vector_tests/swap().cpp:72:57: note: in instantiation of function template specialization 'swap_test<int>' requested here
    exit(run_vector_unit_test<int>("swap()", swap_test, swap_test));
                                                        ^
/home/aponyatov/Desktop/ft_cont/ft_containers/ft_vector/ft_vector.hpp:56:14: note: explicit constructor is not a candidate
    explicit vector (const allocator_type& alloc = allocator_type()) : vector_base(alloc) {
             ^
/home/aponyatov/Desktop/ft_cont/ft_containers/ft_vector/ft_vector.hpp:61:14: note: explicit constructor is not a candidate
    explicit vector(size_type n, const T& val = T(), const allocator_type& alloc = allocator_type()) : vector_base(alloc) {
             ^
/home/aponyatov/Desktop/ft_cont/ft_containers/ft_vector/ft_vector.hpp:69:14: note: explicit constructor is not a candidate
    explicit vector(const my_vector& x) : vector_base(x.allocator_) {
             ^
/home/aponyatov/Desktop/ft_cont/ft_containers/ft_vector/ft_vector.hpp:78:14: note: explicit constructor is not a candidate
    explicit vector(InputIterator first, InputIterator last, const allocator_type& alloc = allocator_type(),
             ^
2 errors generated.
.hpp:245:10: note: candidate template ignored: substitution failure [with InputIterator = ft::Ptrit<int, long, int *, int &, int *, int &>]: no member named 'value' in 'ft::is_integral<ft::Ptrit<int, long, int *, int &, int *, int &>>'
    void insert (iterator position, InputIterator first, InputIterator last,
         ^
/home/aponyatov/Desktop/ft_cont/ft_containers/ft_vector/ft_vector.hpp:290:14: note: candidate function not viable: requires 2 arguments, but 3 were provided
    iterator insert(iterator position, const value_type& val) {
             ^
3 errors generated.
